bug[ats_ATS307497]: Consolidate AtsUserServiceImpl
Change-Id: Id43047620cc36e133e96cb5e36f4818e9a524229